[gd_scene load_steps=14 format=2]

[ext_resource path="res://GUI/LoginScreenCanvasLayer.gd" type="Script" id=1]
[ext_resource path="res://Font/AncientModernTales-a7Po.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Sprites/generic-rpg-ui-inventario02.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 26
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.572549, 0.654902, 0.521569, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="DynamicFont" id=3]
size = 23
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.572549, 0.654902, 0.521569, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.572549, 0.654902, 0.521569, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.572549, 0.654902, 0.521569, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.572549, 0.654902, 0.521569, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.572549, 0.654902, 0.521569, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="DynamicFont" id=9]
size = 66
extra_spacing_char = 3
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.278431, 0.286275, 0.27451, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[node name="LoginScreenCanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Control"]
anchor_left = 0.000696643
anchor_top = 0.00235703
anchor_right = 1.0007
anchor_bottom = 1.00236
margin_left = -98.7071
margin_top = -5.10046
margin_right = 89.293
margin_bottom = 113.899
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoginLabel" type="Label" parent="Control/NinePatchRect"]
margin_left = 286.959
margin_top = 319.98
margin_right = 702.959
margin_bottom = 357.98
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.854902, 0.913725, 0.890196, 1 )
text = "Login"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="usernameLineEdit" type="LineEdit" parent="Control/NinePatchRect"]
margin_left = 305.73
margin_top = 363.256
margin_right = 707.73
margin_bottom = 410.256
placeholder_text = "Enter Username Here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="passwordLineEdit" type="LineEdit" parent="Control/NinePatchRect"]
margin_left = 306.343
margin_top = 423.664
margin_right = 712.343
margin_bottom = 467.664
secret = true
placeholder_text = "Enter Password Here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="loginButton" type="Button" parent="Control/NinePatchRect"]
margin_left = 428.506
margin_top = 484.367
margin_right = 562.506
margin_bottom = 529.367
custom_styles/normal = SubResource( 2 )
text = "Login"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RegisterLabel" type="Label" parent="Control/NinePatchRect"]
anchor_top = 0.00106332
anchor_bottom = 0.00106332
margin_left = 379.293
margin_top = 6.16441
margin_right = 589.293
margin_bottom = 32.1644
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.854902, 0.913725, 0.890196, 1 )
text = "Register"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionLabel" type="Label" parent="Control/NinePatchRect"]
margin_left = 312.541
margin_top = 187.384
margin_right = 684.541
margin_bottom = 210.384
text = "Secret Question: What was the first concert you attended?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="registerUsernameLineEdit" type="LineEdit" parent="Control/NinePatchRect"]
margin_left = 312.541
margin_top = 35.3553
margin_right = 695.541
margin_bottom = 80.3555
placeholder_text = "Enter Username Here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="registerConfirmPasswordLineEdit" type="LineEdit" parent="Control/NinePatchRect"]
margin_left = 312.971
margin_top = 139.586
margin_right = 697.971
margin_bottom = 179.586
secret = true
placeholder_text = "Confirm Password Here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="registerPasswordLineEdit" type="LineEdit" parent="Control/NinePatchRect"]
margin_left = 313.956
margin_top = 88.388
margin_right = 696.956
margin_bottom = 133.388
secret = true
placeholder_text = "Enter Password Here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="registerSecretQuestionLineEdit" type="LineEdit" parent="Control/NinePatchRect"]
margin_left = 310.42
margin_top = 213.546
margin_right = 693.42
margin_bottom = 258.546
placeholder_text = "Enter Answer In Case You Forget Your Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="registerButton" type="Button" parent="Control/NinePatchRect"]
margin_left = 427.849
margin_top = 264.811
margin_right = 554.849
margin_bottom = 312.811
custom_styles/normal = SubResource( 4 )
text = "Register"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="createButton" type="Button" parent="Control/NinePatchRect"]
margin_left = 198.697
margin_top = 482.246
margin_right = 346.697
margin_bottom = 530.246
custom_styles/normal = SubResource( 5 )
text = "Create New Account"

[node name="forgotButton" type="Button" parent="Control/NinePatchRect"]
margin_left = 625.757
margin_top = 484.159
margin_right = 755.757
margin_bottom = 533.159
custom_styles/normal = SubResource( 6 )
text = "Forgot Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="responseLabel" type="Label" parent="Control/NinePatchRect"]
margin_left = 297.692
margin_top = 549.422
margin_right = 732.692
margin_bottom = 581.422
align = 1

[node name="reloadButton" type="Button" parent="Control/NinePatchRect"]
margin_left = 770.155
margin_top = 30.8995
margin_right = 851.155
margin_bottom = 60.8995
custom_styles/normal = SubResource( 7 )
text = "Refresh"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backButton" type="Button" parent="Control/NinePatchRect"]
margin_left = 111.839
margin_top = 22.4142
margin_right = 192.839
margin_bottom = 52.4142
custom_styles/normal = SubResource( 8 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AccountCreated" type="ColorRect" parent="Control/NinePatchRect"]
visible = false
margin_left = 214.0
margin_top = 5.0
margin_right = 909.0
margin_bottom = 352.0
color = Color( 0.572549, 0.654902, 0.521569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/NinePatchRect/AccountCreated"]
margin_left = 156.08
margin_top = 97.4142
margin_right = 512.08
margin_bottom = 156.414
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.945098, 0.945098, 0.945098, 1 )
text = "Account created"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AccountLogin" type="ColorRect" parent="Control/NinePatchRect"]
visible = false
margin_left = 189.251
margin_top = 241.174
margin_right = 884.251
margin_bottom = 588.174
color = Color( 0.572549, 0.654902, 0.521569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/NinePatchRect/AccountLogin"]
margin_left = 144.766
margin_top = 97.4142
margin_right = 500.766
margin_bottom = 169.414
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.945098, 0.945098, 0.945098, 1 )
text = "Enter"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control/NinePatchRect/AccountLogin"]
margin_left = 255.973
margin_top = 198.697
margin_right = 394.973
margin_bottom = 247.697
custom_styles/normal = SubResource( 10 )
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/NinePatchRect/loginButton" to="." method="_on_loginButton_pressed"]
[connection signal="pressed" from="Control/NinePatchRect/registerButton" to="." method="_on_registerButton_pressed"]
[connection signal="pressed" from="Control/NinePatchRect/createButton" to="." method="_on_createButton_pressed"]
[connection signal="pressed" from="Control/NinePatchRect/forgotButton" to="." method="_on_forgotButton_pressed"]
[connection signal="pressed" from="Control/NinePatchRect/reloadButton" to="." method="_on_reloadButton_pressed"]
[connection signal="pressed" from="Control/NinePatchRect/backButton" to="." method="_on_backButton_pressed"]
[connection signal="pressed" from="Control/NinePatchRect/AccountLogin/Button" to="." method="_on_Button_pressed"]
